# fast_zero

./: Dockerfile  alembic.ini  pyproject.toml
.github/workflows/: pipeline.yaml
migrations/: env.py
migrations/versions/: 00ecf57040b6_adicionando_created_at_e_updated_at_na_.py  25e44b516a27_exercicio_02_aula_04.py  296e8f74f408_create_users_table.py  d086bd25f076_create_todos_table.py  d18b108b32fb_create_users_table.py
src/fast_zero/: app.py  models.py  schemas.py  security.py
src/fast_zero/routers/: auth.py  todos.py  users.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_todo.py  test_users.py
